maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: reassignment to val
  angle = angle + 1;
        ^Escaper:15: error: reassignment to val
  while(estFaceMur()){droite();angle=angle-1}
                                    ^Escaper:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return angle
         ^Escaper:17: warning: enclosing method suivre_mur has result type Unit: return value discarded
  return angle
  ^Escaper:22: error: type mismatch;
 found   : Unit
 required: Int
do {angle=suivre_mur(angle)} while (!(angle==0 && getDirection==dir))
                    ^