maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
 
def isDirectionFree () {
  var direction = getDirection();
  setDirection(dir);
  if(!estFaceMur()){avance()};
  else {setDirection(direction)};
}


def suivre_mur(angle:Int) {
  gauche();
  angle = angle + 1;
  while(estFaceMur()){droite();angle=angle-1}
  avance();
  return angle
  }

var angle = 0;
var dir = getDirection();
do {angle=suivre_mur(angle)} while (!(angle==0 && getDirection==dir))
}